# vscode-mcp-rag

./: .gitignore  CHANGELOG.md  Makefile  PULL_REQUEST_MCP_FIXES.md  README.md  READY.txt  SESSION_COMPLETE.md  STATUS_FINAL.txt  STATUS_FINAL_OLD.txt  USAGE_SUMMARY.md  export-mcp.sh  export-mcp.sh.bak  main.py  mcp-vecxtor-project.code-workspace  pyproject.toml
api/: .env.example  Dockerfile  README.md  SIMPLIFICATION_GUIDE.md  SOLUTION_SUMMARY.md  client.py  copilot_rag.py  docker-compose.yml  main.py  mcp_client.py  requirements.txt  setup_ultra_simple.sh  start.sh  test_api.py  ultra_simple.py  zero_config.py
config/: mcp-questions.example.yaml  objetivo.yaml
docker/: .env.example  docker-compose.yaml
docs/: CODE_UPDATES_SUMMARY.md  USAGE_GUIDE.md
docs/docker/: DOCKER.md  DOCKER_ARCHITECTURE.md  DOCKER_CHECKLIST.md  DOCKER_COMPLETION.md  DOCKER_IMPROVEMENTS.md  DOCKER_INDEX.md  DOCKER_QUICK_REF.md  DOCKER_SUMMARY.md
docs/project/: CONFIGURATION.md  DELIVERY.md  EXPORT_COMPLETE.md  FILE_STRUCTURE.md  INDEX.md  INTEGRATION.md  MCP_COMPLETE.md  MCP_FOLDER_STRUCTURE.md  PRONTO.md  PRONTO_MCP.md  TESTES_EXECUTADOS.md  WELCOME.md
export/: EXPORT_REPORT.txt  qdrant-mcp-server_20251017_173804.sha256  qdrant-mcp-server_20251017_190552.sha256  qdrant-mcp-server_20251017_190833.sha256  qdrant-mcp-server_20251017_190940.sha256  qdrant-mcp-server_20251018_165312.sha256  qdrant-mcp-server_20251018_170632.sha256  verify.sh
scripts/: mcp_install_deps_report.sh  mcp_qdrant_report.sh  mcp_quickstart_report.sh  mcp_test_ingest_report.sh  setup_vscode_config.py
(+30 files in other folders)
